--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,21 @@
 body {
   margin: 0;
   max-height: 100vh;
- 
 }
-
 header {
   background-color: rgb(0,208,178);
   font-size: xx-large;
   padding: 10px;
   color: white;
 }
-
 .folderList {
   font-size: larger;
 }
-
+.newTask {
+  display: flex;
+  gap: 20px;
+}
+.folderList {
+  display: flex;
+  gap: 20px;
+}
