--- a/src/style.css
+++ b/src/style.css
@@ -8,14 +8,14 @@ header {
   padding: 10px;
   color: white;
 }
-.folderList {
+#folderList {
   font-size: larger;
 }
 .newTask {
   display: flex;
   gap: 20px;
 }
-.folderList {
-  display: flex;
+.folderContainer {
+  display:flex;
   gap: 20px;
 }
